tests/dfrouter/errors/detector_flow_files/false_detectors_flows_file1/errors.dfrouter
Error: The measure-file 'xxx.txt' can not be opened.
Quitting (on error).
